@@ -1,13 +1,13 @@
 libc_add-ons = $(add-ons)
 libc_rtlddir = /lib64
-extra_cflags = -mno-plt
+extra_cflags = -mno-plt -march=mips64r2
 
 # build 32-bit (n32) alternative library
 GLIBC_MULTILIB_PASSES += mipsn32
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mipsn32 libc6-dev-mipsn32
 mipsn32_add-ons = $(add-ons)
 mipsn32_configure_target = mips64-linux-gnuabin32
-mipsn32_extra_cflags = -mno-plt
+mipsn32_extra_cflags = -mno-plt -march=mips64r2
 mipsn32_CC = $(CC) -mabi=n32
 mipsn32_CXX = $(CXX) -mabi=n32
 libc6-mipsn32_shlib_dep = libc6-mipsn32 (>= $(shlib_dep_ver))
@@ -21,7 +21,7 @@ GLIBC_MULTILIB_PASSES += mips32
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mips32 libc6-dev-mips32
 mips32_add-ons = $(add-ons)
 mips32_configure_target = mips-linux-gnu
-mips32_extra_cflags = -mno-plt
+mips32_extra_cflags = -mno-plt -march=mips32r2
 mips32_CC = $(CC) -mabi=32
 mips32_CXX = $(CXX) -mabi=32
 libc6-mips32_shlib_dep = libc6-mips32 (>= $(shlib_dep_ver))
