@@ -56,6 +56,8 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
     installed. They are still tested when calling the build-arch or
     binary-arch targets, but not anymore when calling the build-indep or
     binary-indep targets.    
+  * sysdeps.mk/mips*.mk: force the ISA until it gets propagated to all
+    GCC versions.
 
   [ Steven Chamberlain ]
   * sysdeps/kfreebsd.mk: find kfreebsd-kernel-headers in multiarch path.
